# QRScan

./: .gitattributes  .gitignore  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-debug.yml  build-release.yml  codeql.yml  jules.yml  lint.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android-legacy/: build.gradle  gradle.properties  gradlew  settings.gradle
android-legacy/app/: build.gradle  proguard-rules.pro
android-legacy/app/src/main/: AndroidManifest.xml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
bada/src/: QRDecoder.cpp  QRDecoder.h  QRScanApp.cpp  QRScanApp.h  QRScanForm.cpp  QRScanForm.h
blackberry/src/com/hexadecinull/qrscan/: QRScanApp.java
docs/: BUILDING.md  CHANGELOG.md  CONTRIBUTING.md
ios/: .swiftlint.yml  ExportOptions.plist  Package.swift
ios/Sources/QRScan/App/: ContentView.swift  Info.plist  QRScanApp.swift
ios/Sources/QRScan/Models/: ScanResult.swift
ios/Sources/QRScan/Services/: HistoryStore.swift  QRCreatorService.swift  Stores.swift
iphoneos/QRScan/: AppDelegate.m  Info.plist  QRDecoder.h  QRDecoder.m  ResultViewController.h  ResultViewController.m  ScanViewController.h  ScanViewController.m
postmarketos/: meson.build
postmarketos/data/: com.hexadecinull.QRScan.desktop
postmarketos/data/schemas/: com.hexadecinull.QRScan.gschema.xml
postmarketos/src/: app.c  app.h  camera_pipeline.c  camera_pipeline.h  creator.h  decoder.c  decoder.h  history_store.c  history_store.h  main.c  result_dialog.c  result_dialog.h  scanner_window.c  scanner_window.h  settings.c  settings.h  util.c  util.h
symbian/group/: QRScan.mmp  bld.inf
symbian/src/: QRScanApp.cpp  QRScanApp.h  QRScanAppUi.cpp  QRScanAppUi.h  QRScanContainer.cpp  QRScanView.cpp  QRScanView.h
(+58 files in other folders)
